# descartes

./: .gitignore  BENCHMARK_MANIFEST.md  BENCHMARK_SUITE_DELIVERY.md  DAG_RENDERER_MOCKUP.md  DAG_RENDERER_REPORT.md  DEBUGGER_QUICK_REFERENCE.md  DEBUGGER_STATE_MODELS.md  DEBUGGER_TEST_COVERAGE.md  EVENT_BUS_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.txt  IMPLEMENTATION_SUMMARY.txt  LIVE_SWARM_MONITOR_DOCUMENTATION.md  NOTIFICATION_IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE3_1.2_FILES_CHANGED.md  PHASE3_1.2_RPC_METHODS_IMPLEMENTATION.md  PHASE3_1.4_RPC_SERVER_TESTS_IMPLEMENTATION.md  PHASE3_1_1_IMPLEMENTATION_REPORT.md  PHASE3_2_4_SUMMARY.md  PHASE3_4_3_FINAL_REPORT.md  PHASE3_5_2_IMPLEMENTATION_SUMMARY.md  PHASE3_5_3_IMPLEMENTATION_REPORT.md  PHASE3_5_3_SUMMARY.md  PHASE3_6_2_IMPLEMENTATION_SUMMARY.md  PHASE3_7_1_SUMMARY.md  PHASE3_7_2_IMPLEMENTATION_REPORT.md  PHASE3_7_3_IMPLEMENTATION_REPORT.md  PHASE3_7_3_SUMMARY.md  PHASE3_7_4_COMPLETION_SUMMARY.md  PHASE3_7_4_TIME_TRAVEL_UI_IMPLEMENTATION.md  PHASE3_7_5_QUICK_REFERENCE.md  PHASE3_8_2_QUICK_REFERENCE.md  PHASE3_8_2_SUMMARY.txt  PHASE3_9.1_IMPLEMENTATION_REPORT.md  PHASE3_9.2_IMPLEMENTATION_REPORT.md  PHASE3_9.3_FINAL_REPORT.md  PHASE3_9.3_SUMMARY.md  PHASE3_9.4_IMPLEMENTATION_REPORT.md  RPC_TESTS_DELIVERABLES.md  SWARM_MONITOR_MOCKUP.md  (+19 more)
descartes/: .dockerignore  CONFIGURATION.md  CONFIG_INDEX.md  CONFIG_MIGRATION.md  Cargo.toml  FILE_LOCATIONS.md  IMPLEMENTATION_SUMMARY.md  INDEX_PHASE2_7_1.md  LEASE_INTEGRATION_PATTERNS.md  NOTIFICATION_ROUTER_GUIDE.md  RAG_DELIVERY.md  README.md  README_PHASE2_7_1.md  SECRETS_TASK_COMPLETION_REPORT.md  STATE_MACHINE_README.md  SWARM_PARSER_USAGE_GUIDE.md  SWARM_TOML_SCHEMA.md  TASK_4.5_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  THOUGHTS_ARCHITECTURE.md  THOUGHTS_QUICK_START.md  poc_state_machine.rs
descartes-v2/: Cargo.toml
descartes-v2/baml_src/: agent_loop.baml  clients.baml  generators.baml  tools.baml  types.baml
descartes-v2/prompts/: build.md  plan.md
descartes-v2/src/: config.rs  lib.rs  main.rs  ralph_loop.rs
descartes-v2/src/agent/: category.rs  mod.rs  subagent.rs  tools.rs
descartes-v2/src/baml/: decision.rs  mod.rs  runtime.rs  types.rs
descartes-v2/src/handoff/: mod.rs
descartes-v2/src/harness/: claude_code.rs  codex.rs  mod.rs  opencode.rs  proxy.rs
descartes-v2/src/interactive/: commands.rs  mod.rs  session.rs  signals.rs  skills.rs
descartes-v2/src/scud/: mod.rs
descartes-v2/src/transcript/: mod.rs  scg.rs
descartes-v2/src/workflow/: config.rs  gate.rs  mod.rs  notify.rs  runner.rs  state.rs
descartes/.descartes/: README.md  config.toml.example
descartes/.descartes/skills/: README.md  lsp-check  lsp-fix  opencode-delegate  opencode-server  web-search
descartes/agent-runner/: ARCHITECTURE_DIAGRAM.md  Cargo.toml  FILE_TREE_QUICKSTART.md  KNOWLEDGE_GRAPH.md  KNOWLEDGE_GRAPH_OVERLAY_ARCHITECTURE.md  KNOWLEDGE_GRAPH_OVERLAY_QUICKSTART.md  MIGRATIONS_INDEX.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_QUICKSTART.md  RAG_README.md
descartes/agent-runner/examples/: file_tree_usage.rs  knowledge_graph_example.rs  knowledge_graph_overlay_example.rs  rag_example.rs
descartes/agent-runner/migrations/: 001_initial_schema.sql  002_create_indexes.sql  003_fts_and_optimization.sql  004_rag_layer_integration.sql  005_initialization_procedures.sql  QUICK_REFERENCE.md  README.md  SCHEMA_DESIGN.md
descartes/agent-runner/src/: db_schema.rs  errors.rs  file_tree_builder.rs  grammar.rs  knowledge_graph.rs  knowledge_graph_overlay.rs  lib.rs  parser.rs  rag.rs  semantic.rs  traversal.rs  types.rs
descartes/agent-runner/tests/: file_tree_builder_test.rs  knowledge_graph_overlay_test.rs  knowledge_graph_performance_tests.rs  knowledge_graph_test.rs  rag_integration_test.rs
descartes/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  flow-implement.md  flow-ingest.md  flow-orchestrator.md  flow-plan-tasks.md  flow-qa.md  flow-review-graph.md  flow-summarize.md  lisp-developer.md  planner.md  researcher.md
descartes/cli/: Cargo.toml
descartes/cli/src/: lib.rs  main.rs  rpc.rs  state.rs
descartes/cli/tests/: init_tests.rs  kill_tests.rs  logs_tests.rs  plugins_tests.rs  ps_tests.rs  spawn_tests.rs
descartes/core/: AGENT_HISTORY_README.md  AGENT_RUNNER.md  AGENT_RUNNER_QUICK_REF.md  BODY_RESTORE_README.md  CLIENT_CONTROL_GUIDE.md  Cargo.toml  IPC_IMPLEMENTATION_SUMMARY.md  IPC_INTEGRATION_GUIDE.md  IPC_QUICK_REFERENCE.md  IPC_README.md  IPC_TECHNICAL_SPEC.md  PERFORMANCE_REPORT.md  STATE_MACHINE_GUIDE.md  STATE_MACHINE_IMPLEMENTATION.md  STATE_STORE_INDEX.md  STATE_STORE_INTEGRATION.md  STATE_STORE_README.md  ZMQ_AGENT_RUNNER.md  ZMQ_FROZEN.md  ZMQ_SERVER.md  body_restore_architecture.md
descartes/core/benches/: BENCHMARKS_CREATED.md  INDEX.md  QUICK_START.md  README.md  concurrent_patterns.rs  ipc_latency.rs  ipc_throughput.rs  main.rs  resource_usage.rs  serialization.rs  testing_utilities.rs  zmq_benchmarks.rs
descartes/core/docs/: TASK_QUERIES.md  TASK_QUERIES_QUICK_REFERENCE.md
descartes/core/examples/: agent_coordination.rs  agent_runner_example.rs  custom_handlers.rs  dag_usage.rs  debugger_example.rs  debugger_logic_example.rs  ipc_example.rs  loop_manual_test.rs  state_machine_demo.rs  state_machine_persistence.rs  swarm_export_demo.rs  task_queries_example.rs  (+3 more)
descartes/daemon/: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  RPC_CLIENT_GUIDE.md  RPC_QUICK_START.md  UNIX_SOCKET_RPC.md  daemon.toml  fly.toml
descartes/docs/: FLOW-WORKFLOW.md  QUICKSTART.md  SKILLS.md
descartes/examples/: dag_example.toml  dag_simple_dependencies.toml  lease_manager_example.rs
descartes/gui/: Cargo.toml  DAG_EDITOR_CONTROLS.md  DEBUGGER_UI_MOCKUP.md  DEBUGGER_UI_README.md  GUI_LAYOUT_MOCKUP.txt  IMPLEMENTATION_SUMMARY_TASK_8_4.md  KNOWLEDGE_GRAPH_GUIDE.md  PHASE3_4_IMPLEMENTATION.md  REALTIME_QUICKSTART.md  REALTIME_UPDATES_README.md  TASK_8_4_CHANGES.txt
descartes/test_project_env/: .gitignore  example_system_prompt.txt
descartes/worker/: Cargo.toml  Dockerfile  README.md  fly.toml
(+458 files in other folders)
