[package]
name = "descartes"
version = "0.1.0"
edition = "2021"
description = "Visible subagent orchestration with Ralph-Wiggum loops"
license = "MIT"
repository = "https://github.com/pyrex41/descartes"
keywords = ["ai", "agents", "orchestration", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "descartes"
path = "src/main.rs"

[lib]
name = "descartes"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for API harnesses)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# SCG parsing
nom = "7"
nom_locate = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
shellexpand = "3"

# Process spawning (for CLI harnesses)
tokio-process = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
# Future: separate harness features if needed
# opencode = []
# codex = []
