[workspace]
members = ["core", "cli", "gui", "agent-runner", "daemon"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Descartes Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"

# High-performance deps
mimalloc = "0.1"
rkyv = "0.7"
ipmpsc = "0.1"

# HTTP/API deps
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = "0.14"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Git
gitoxide = "0.19"
gix = "0.58"

# CLI
clap = { version = "4.4", features = ["derive"] }

# JSON streaming
ndjson = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
toml = "0.8"

# State machine
statig = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
