[package]
name = "agent-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

# Descartes core
descartes-core = { path = "../core" }

# Tree-Sitter and Language Grammars
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"

# Parallel processing
rayon = "1.7"

# Utility libraries
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
regex = "1.10"
once_cell = "1.19"
tempfile = "3.8"

# RAG (Retrieval-Augmented Generation) dependencies
lancedb = "0.22"
tantivy = "0.22"

# Embedding and ML utilities
ndarray = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
blake3 = "1.5"

# Serialization for embeddings
bincode = "1.3"
lz4 = "1.24"
