[package]
name = "descartes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# High-performance
mimalloc = { workspace = true }
rkyv = { workspace = true }

# HTTP/API
reqwest = { workspace = true }
hyper = { workspace = true }

# Database
sqlx = { workspace = true }

# Git
gitoxide = { workspace = true }

# UUID
uuid = { workspace = true }

# Additional core dependencies
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
