[package]
name = "descartes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# High-performance
mimalloc = { workspace = true }
rkyv = { workspace = true }

# HTTP/API
reqwest = { workspace = true }
hyper = { workspace = true }

# Database
sqlx = { workspace = true }

# Git
gix = { workspace = true }

# UUID
uuid = { workspace = true }

# Additional core dependencies
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
chrono = { workspace = true }
dirs = "5.0"
toml = { workspace = true }

# Cryptography for secrets management
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
generic-array = "0.14"
bincode = "1.3"

# State machine
statig = { workspace = true }

# SCUD task management
scud = { workspace = true }

# ZeroMQ for remote agent communication
zeromq = "0.4"
rmp-serde = "1.1"  # MessagePack for efficient serialization
base64 = "0.22"  # Base64 encoding for binary data
tokio-stream = "0.1"  # Stream utilities for async
which = "7.0"  # CLI detection

# Plugin System
wasmtime = "14.0"

# Unix signal handling (for agent process management)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"
wat = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false

[[bench]]
name = "zmq_benchmarks"
harness = false
