[package]
name = "descartes-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

# Descartes core
descartes-core = { path = "../core" }

# JSON-RPC (legacy)
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-derive = "18.0"

# jsonrpsee (new implementation for Unix sockets)
jsonrpsee = { version = "0.21", features = ["server", "macros", "http-client", "ws-client"] }

# HTTP and WebSocket
hyper = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = "0.21"
futures = "0.3"
clap = { workspace = true, features = ["derive"] }

# Connection pooling
deadpool = { version = "0.10", features = ["managed"] }

# Metrics and monitoring
prometheus = "0.13"

# OpenAPI schema generation (we'll generate manually)

# ZeroMQ for streaming
zeromq = "0.4"

# Additional utilities
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
toml = "0.8"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# Authentication
jsonwebtoken = "9.2"
hex = "0.4"
base64 = "0.21"

# Error handling
failure = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"

[[bin]]
name = "descartes-daemon"
path = "src/main.rs"
