[package]
name = "descartes-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
agent-runner = ["dep:descartes_agent_runner"]

[dependencies]
descartes-core = { path = "../core" }
descartes-daemon = { path = "../daemon" }
descartes_agent_runner = { package = "agent-runner", path = "../agent-runner", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# GUI framework
iced = { version = "0.13", features = ["debug", "tokio", "advanced", "canvas"] }
futures = "0.3"
reqwest = { workspace = true }
which = "6.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[[bin]]
name = "descartes-gui"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"

[[bench]]
name = "swarm_monitor_bench"
harness = false
